tests/fail.m31
fail Type Type

fail Type
